<resources>
    <string name="app_name">cinemaProvaFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">tab layout</string>
    <string name="login">Login</string>
    <string name="sfondo_teatro">sfondo_teatro</string>
    <string name="logo">logo</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="registrati">Registrati</string>
    <string name="back">back</string>
    <string name="registrazione">Registrazione</string>
    <string name="regione">Regione</string>
    <string name="provincia">Provincia</string>
    <string name="btn_map">Mapp</string>
    <string name="sfondo_scheda_cinema">sfondo scheda cinema</string>
    <string name="nome_del_cinema">nome del cinema</string>
    <string name="indirizzo">indirizzo</string>
    <string name="city">citta</string>
    <string name="servizi">servizi</string>
    <string name="sale">sale</string>
    <string name="programmazione_del_cinema">Programmazione del Cinema</string>
    <string name="sfondo_film_grande">sfondo film grande</string>
    <string name="immagine_film">immagine film</string>
    <string name="favourite">favourite</string>
    <string name="anno">anno</string>
    <string name="durata">durata</string>
    <string name="nome_del_film">nome del film</string>
    <string name="cinema">CINEMA</string>
    <string name="story">story</string>
    <string name="more">MORE</string>
    <string name="director">DIRECTOR</string>
    <string name="regia">regia</string>
    <string name="cast">CAST</string>
    <string name="cast_film">cast film</string>
    <string name="genre">GENRE</string>
    <string name="genre_film">genere del film</string>
    <string name="write_a_review">Write a Review</string>
    <string name="immagine_splash">immagine splash</string>
    <string name="film_in_tendenza">Film in Tendenza</string>
    <string name="immagine_cinema_bg">immagine cinema bg</string>
    <string name="il_cinema_pi_vicino_a_te">Il cinema più vicino a te</string>
    <string name="immagine_home_mappa">immagine home mappa</string>
    <string name="nome_cinema">nome Cinema</string>
    <string name="scheda_cinema">Scheda cinema</string>
    <string name="title">Title</string>
    <string name="data">data</string>
    <string name="dropdown_item">dropdown item</string>
    <string name="login_icon">icona login</string>
    <string name="search_icon">icona cerca</string>
    <string name="icon_logout">icona logout</string>
    <string name="iniziale_nome">iniziale nome</string>
</resources>