<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/film_in_tendenza"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/home_textView1"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/separator"
        android:layout_marginTop="2dp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_error_image="@drawable/ic_launcher_background"
        app:iss_period="1000"
        app:iss_placeholder="@drawable/ic_launcher_foreground" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/image_slider"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:contentDescription="@string/immagine_cinema_bg"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Material.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/home_textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:padding="5dp"
                android:text="@string/il_cinema_pi_vicino_a_te"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mapView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/home_textView2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/immagine_home_mappa"
                android:src="@drawable/map"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_textView2"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/mapView"
                android:text="@string/nome_cinema"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/indirizzo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nome"
                android:layout_toEndOf="@+id/mapView"
                android:text="@string/indirizzo"
                android:textColor="?attr/colorOnPrimaryContainer" />

            <TextView
                android:id="@+id/servizi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indirizzo"
                android:layout_toEndOf="@+id/mapView"
                android:text="@string/servizi"
                android:textColor="?attr/colorOnPrimaryContainer" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indirizzo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="7dp"
                android:text="Scheda"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/programmazione_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:background="?attr/colorPrimary"
        android:text="@string/programmazione_del_cinema"
        android:textAlignment="center"
        android:paddingVertical="2dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/programmazione_textView"
        android:animateLayoutChanges="false">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
</ScrollView>